commit 6 : creation token

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,9 +5,17 @@
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet>
+        <servlet-name>ConfirmationEmail</servlet-name>
+        <servlet-class>controller.ConfirmationEmail</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ConfirmationEmail</servlet-name>
+        <url-pattern>/ConfirmationEmail</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
