--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-codec-20041127.091804.jar=C:\\COURS\\BTS 2019\\INFORMATIQUE\\1- Brigitte Groleas\\tools\\commons-codec-20041127.091804.jar
+file.reference.javax.activation-1.2.0.jar=C:\\COURS\\BTS 2019\\INFORMATIQUE\\1- Brigitte Groleas\\tools\\javax.activation-1.2.0.jar
 file.reference.javax.mail.jar=C:\\COURS\\BTS 2019\\INFORMATIQUE\\1- Brigitte Groleas\\tools\\javax.mail.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,7 +42,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.MySQL_JDBC_Driver.classpath}:\
     ${libs.jstl.classpath}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.javax.activation-1.2.0.jar}:\
+    ${file.reference.commons-codec-20041127.091804.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
