--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     </servlet>
     <servlet>
         <servlet-name>confirmationEmail</servlet-name>
-        <servlet-class>controller.confirmationEmail</servlet-class>
+        <servlet-class>controller.ConfirmationEmailServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
