--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-codec-jar.jar=C:\\Users\\Ciss\u00e9-LENOVO\\Documents\\NetBeansProjects\\commons-codec-jar.jar
+file.reference.javax.mail.jar=C:\\Users\\Ciss\u00e9-LENOVO\\Documents\\NetBeansProjects\\javax.mail.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +40,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.MySQL_JDBC_Driver.classpath}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.commons-codec-jar.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
