--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -69,7 +69,7 @@ javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
-javadoc.windowtitle=
+javadoc.windowtitle=Javadoc
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
