--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.mysql-connector-java-5.1.6-bin.jar=C:\\Users\\maxim\\OneDrive\\Bureau\\chose\\mysql-connector-java-5.1.6-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +39,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.MySQL_JDBC_Driver.classpath}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.6-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
